# sse-demo

./: .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  DUPLICATE_HEADER_FIX.md  EVENT_DESIGN.md  GENERIC_JSON_EDITOR.md  GITHUB_TIMELINE_IMPLEMENTATION.md  MIGRATION_COMPLETE.md  MODAL_JSON_EDITOR.md  PLUGIN_SYSTEM_SUMMARY.md  PROJECT_STRUCTURE.md  REACT_CONVERSION.md  README.md  Shuttle.toml  TIMELINE_IMPLEMENTATION.md  TIMELINE_IMPLEMENTATION_SUMMARY.md  TIMELINE_VISUAL_MOCKUP.md  asyncapi-embedded.yaml  asyncapi.yaml  build.rs  build.sh  dev.sh  package.json  playwright.config.ts  pnpm-lock.yaml  test-api.sh
.github/workflows/: ci.yml  e2e.yml  shuttle.yml
frontend/: RESOURCE_EDITOR_USAGE.md  TEST_README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.tsx  index.css  setupTests.ts  types.ts
frontend/src/__tests__/: SSEContext.test.tsx  example.test.tsx  simple.test.tsx
frontend/src/components/: ActionButton.tsx  ActionLink.tsx  ActivePlanningSection.tsx  ActiveTaskSection.tsx  ApiDocumentationView.tsx  Card.tsx  CloudEventsStream.tsx  CommentForm.tsx  ConnectionStatus.tsx  CreateIssueForm.tsx  DeadlineBadge.tsx  DeletedItem.tsx  DocumentationSection.tsx  GitHubTimeline.css  GitHubTimeline.tsx  InfoHelp.tsx  InstallPrompt.tsx  IssueHeader.tsx  IssueTimeline.tsx  IssuesList.tsx  Modal.tsx  NotificationBell.css  NotificationBell.tsx  PageHeader.tsx  PatchIssueForm.tsx  PlanningCard.tsx  PlanningStatusBadge.tsx  README.md  ResourceEditor.tsx  SchemaEditForm.tsx  SchemaEditFormContent.tsx  SchemaField.tsx  SchemaForm.tsx  ScrollToTop.tsx  SearchBar.tsx  SectionLabel.tsx  TableOfContents.tsx  Task.css  Task.tsx  TaskCard.tsx  (+4 more)
scripts/: generate-types.js
src/: handlers.rs  index.html  issues.rs  lib.rs  main.rs  push.rs  schemas.rs  storage.rs  types.rs
src/css/: styles.css
tests/: global-setup.ts  sse-demo.spec.ts
(+44 files in other folders)
