[package]
name = "sse-delta-snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures-util = "0.3"
shuttle-runtime = "0.56.0"
shuttle-axum = "0.56.0"
