[package]
name = "sse-delta-snapshot"
version = "0.1.0"
edition = "2021"


[features]
default = ["shuttle"]
shuttle = []
local = []

[dependencies]

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures-util = "0.3"
shuttle-runtime = "0.56.0"
shuttle-axum = "0.56.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid", "non_strict_integers"] }
utoipa-axum = "0.2"
serde_yaml = "0.9"
